package edu.fiuba.algo3.modelo;

public class NexoMineral extends Edificio{

    public NexoMineral(HitPoints HP){
        hp = HP;
        cantTurnosParaSerOperativo = 0;
    }

}
